--- a/basics.ipynb
+++ b/basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "basics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMjh9vuxbx6iaeUjv12Qol/",
+      "authorship_tag": "ABX9TyOl08ehJ45BBJfvXTokMg8X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0lAXusTvIdy5"
       },
@@ -50,7 +50,7 @@
         "id": "9KWEPrsPImZy",
         "outputId": "c556ea5b-077b-4792-f04e-09b0943b1572"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "mFvyzBL3Iz9N"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "aUS9jaW5JTEx"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "id": "sbx8yTWAJXSu",
         "outputId": "632897d5-e17d-4cc1-a118-20e4cf73ec83"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "f7y_SQtrJbsO"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
         "id": "DmA-q7yFLxgi",
         "outputId": "243a3d0d-3694-41dc-b663-660c456557b1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "1NDfQldLMh_u"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,7 +172,7 @@
         "id": "J1_boxlsMpfq",
         "outputId": "4257bc80-4a5b-4369-9c5a-778620d508f9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "mJt-rNqIMrVC"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "id": "HABm36lMNd35",
         "outputId": "3f5d5042-0404-428d-bfbd-d008c568e2ef"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,26 +226,41 @@
     {
       "cell_type": "code",
       "source": [
-        "car_info ={\"brand\":'ford'\n",
-        "'year' : 1963}"
+        "thisdict = {\n",
+        "  \"brand\": \"Ford\",\n",
+        "  \"model\": \"Mustang\",\n",
+        "  \"year\": 1964\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "X1MZ-FI0NfgY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(thisdict)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "X1MZ-FI0NfgY",
-        "outputId": "53ca2be5-857f-4ef4-a901-580f1956be30"
+        "id": "U7LNu3WxOh9j",
+        "outputId": "3e6a34c6-88b6-4b33-879c-4fe5f2c9f78e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-f94666a12d50>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'year' : 1963}\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     },
@@ -255,7 +270,7 @@
         ""
       ],
       "metadata": {
-        "id": "U7LNu3WxOh9j"
+        "id": "CCpKDYqlRmUk"
       },
       "execution_count": null,
       "outputs": []
